# FALCON

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyocd.yaml  west.yml
.github/workflows/: clang-format.yml  style-check.yml
apps/peripheral_tests/blinky_test/src/: main.c
apps/peripheral_tests/sd_test/: CMakeLists.txt  prj.conf
apps/peripheral_tests/sd_test/src/: main.c
apps/peripheral_tests/sensor_test/: CMakeLists.txt  prj.conf
apps/peripheral_tests/sensor_test/src/: main.c
apps/rockets/cloudburst/: CMakeLists.txt  prj.conf
apps/rockets/cloudburst/src/: data.c  data.h  log_format.h  logger_thread.c  logger_thread.h  main.c  state_machine.c
apps/rockets/cloudburst/src/pyro/: pyro_thread.c  pyro_thread.h
apps/rockets/cloudburst/src/sensors/: baro_thread.c  baro_thread.h  imu_thread.c  imu_thread.h
apps/rockets/cloudburst/src/state_machine/: state_machine.c  state_machine_common.c  state_machine_config.h  state_machine_internal.h  state_machine_states.h  state_machine_test.h
apps/rockets/cloudburst/src/state_machine/states/: ascent.c  drogue_descent.c  mach_lock.c  main_descent.c  standby.c
apps/rockets/cloudburst/tests/state_machine/: testcase.yaml
apps/rockets/cloudburst/tests/state_machine/src/: main.c
blinkytest/: CMakeLists.txt
blinkytest/src/: main.c
boards/: native_sim.overlay
boards/st/ubcrocket_fc_2526_r1/: Kconfig.defconfig  Kconfig.ubcrocket_fc_2526_r1  board.yml  ubcrocket_fc_2526_r1-common.dtsi  ubcrocket_fc_2526_r1.dts
boards/ubcrocket/polarity/: Kconfig.defconfig  Kconfig.ubcrocket_polarity  board.yml  ubcrocket_polarity.dts  ubcrocket_polarity.yaml
drivers/: CMakeLists.txt  Kconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/ms5611/: CMakeLists.txt  Kconfig  ms5611.c  ms5611.h  ms5611_i2c.c  ms5611_spi.c
drivers/sensor/sim_accel/: CMakeLists.txt  Kconfig  sim_accel.c
drivers/sensor/sim_baro/: CMakeLists.txt  Kconfig  sim_baro.c
drivers/sensor/sim_common/: CMakeLists.txt  Kconfig  sim_csv.c  sim_csv.h
drivers/sensor/sim_gyro/: CMakeLists.txt  Kconfig  sim_gyro.c
drivers/sensor/sim_pyro/: CMakeLists.txt
drivers/sensor/sim_sdmmc/: CMakeLists.txt  Kconfig
drivers/spi/: CMakeLists.txt  Kconfig
drivers/spi/sim_pyro/: Kconfig  sim_pyro.c
dts/bindings/sensor/: meas,ms5611-i2c.yaml  meas,ms5611-spi.yaml  zephyr,sim-accel.yaml  zephyr,sim-baro.yaml  zephyr,sim-gyro.yaml  zephyr,sim-pyro.yaml  zephyr,sim-sdmmc-disk.yaml
dts/bindings/spi/: zephyr,sim-pyro.yaml
falcon/: CMakeLists.txt  prj.conf
falcon/src/: data.h  log_format.h  logger_thread.c  main.c
falcon/src/sensors/: imu_thread.c  imu_thread.h
firmware/: CMakeLists.txt  native_sim.conf  prj.conf
firmware/boards/: native_sim_native_64.conf
firmware/src/: data.c  data.h  log_format.h  logger_thread.c  main.c
firmware/src/gps/: gps_thread.c  gps_thread.h  lwgps_opts.h
firmware/src/pyro/: pyro_thread.c  pyro_thread.h
firmware/src/radio/: radio_thread.c  radio_thread.h
firmware/src/sensors/: baro_thread.c  imu_thread.h
firmware/src/state_machine/: state_machine.c  state_machine.h  state_machine_config.h  state_machine_internal.h
firmware/src/state_machine/states/: ascent.c  drogue_descent.c  landed.c  mach_lock.c  standby.c
firmware/tests/integration/: CMakeLists.txt  prj.conf  testcase.yaml
firmware/tests/integration/src/: main.c
firmware/tests/state_machine/: CMakeLists.txt  prj.conf  testcase.yaml
packs/: Keil.STM32H5xx_DFP.2.1.1.pack
peripheral_tests/blinky_test/: CMakeLists.txt
peripheral_tests/sd_test/: CMakeLists.txt
peripheral_tests/sensor_test/: CMakeLists.txt
sdtest/: CMakeLists.txt  prj.conf
sdtest/src/: main.c
sensortest/: CMakeLists.txt  prj.conf
sensortest/src/: main.c
zephyr/: module.yml
